@@ -1,12 +1,9 @@
 package com.senai.Geriatricare.services;
 
-
-import com.senai.Geriatricare.entities.PapelEntity;
-import com.senai.Geriatricare.entities.UsuarioEntity;
+import com.senai.Geriatricare.models.*;
 import com.senai.Geriatricare.enums.Papel;
-import com.senai.Geriatricare.models.UsuarioModel;
-import com.senai.Geriatricare.repositories.PapelRepository;
-import com.senai.Geriatricare.repositories.UsuarioRepository;
+import com.senai.Geriatricare.entities.UsuarioEntity;
+import com.senai.Geriatricare.repositories.*;
 import jakarta.persistence.EntityNotFoundException;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.security.crypto.password.PasswordEncoder;
@@ -14,130 +11,182 @@ import org.springframework.stereotype.Service;
 
 import java.util.Collections;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 public class UsuarioService {
     private final UsuarioRepository usuarioRepository;
     private final PapelRepository papelRepository;
-    private final PasswordEncoder PasswordEncoder;
-
+    private final PasswordEncoder passwordEncoder;
+    private final ClienteRepository clienteRepository;
+    private final FuncionarioRepository funcionarioRepository;
+    private final AdminRepository adminRepository;
+    private final FamiliarRepository familiarRepository;
 
     @Autowired
-    public UsuarioService(UsuarioRepository usuarioRepository, PapelRepository papelRepository, PasswordEncoder PasswordEncoder) {
+    public UsuarioService(UsuarioRepository usuarioRepository, PapelRepository papelRepository, PasswordEncoder passwordEncoder, ClienteRepository clienteRepository, FuncionarioRepository funcionarioRepository, AdminRepository adminRepository, FamiliarRepository familiarRepository) {
         this.usuarioRepository = usuarioRepository;
         this.papelRepository = papelRepository;
-        this.PasswordEncoder = PasswordEncoder;
+        this.passwordEncoder = passwordEncoder;
+        this.clienteRepository = clienteRepository;
+        this.funcionarioRepository = funcionarioRepository;
+        this.adminRepository = adminRepository;
+        this.familiarRepository = familiarRepository;
     }
 
-    public void criarUsuario(UsuarioModel usuarioModel) {
-        if (usuarioRepository.findByNomeUsuario(usuarioModel.getNomeUsuario()) != null) {
-            throw new IllegalArgumentException("Já existe um usuário com o nome: " + usuarioModel.getNomeUsuario());
+    public void criarUsuario(UsuarioEntity usuarioEntity) {
+        if (usuarioRepository.findByNomeUsuario(usuarioEntity.getNomeUsuario()) != null) {
+            throw new IllegalArgumentException("Já existe um usuário com o nome: " + usuarioEntity.getNomeUsuario());
         }
-        if (!usuarioModel.getSenha().validaSenha()) {
+        if (usuarioEntity.getSenha() == null || !usuarioEntity.getSenha().validaSenha()) {
             throw new IllegalArgumentException("Senha inválida. A senha deve ter no mínimo 8 caracteres, incluindo letras maiúsculas, minúsculas, números e caracteres especiais.");
         }
 
-        List<PapelEntity> papeisEntity = usuarioModel.getPapel().stream().map(papelEnum -> {
-            PapelEntity papelEntity = papelRepository.findByPapel(papelEnum);
-            if (papelEntity == null) {
+        List<PapelModel> papeisEntity = usuarioEntity.getPapel().stream().map(papelEnum -> {
+            PapelModel papelModel = papelRepository.findByPapel(papelEnum);
+            if (papelModel == null) {
                 throw new EntityNotFoundException("Papel não encontrado: " + papelEnum.name());
             }
-            return papelEntity;
-        }).toList();
+            return papelModel;
+        }).collect(Collectors.toList());
 
-        UsuarioEntity usuario = usuarioModel.toEntity();
+        UsuarioModel usuario = usuarioEntity.toModel();
+        usuario.setSenha(passwordEncoder.encode(usuarioEntity.getSenha().getSenha()));
         usuario.setPapeis(papeisEntity);
+
+        if (usuarioEntity.getCliente_id() != null) {
+            ClienteModel cliente = clienteRepository.findById(usuarioEntity.getCliente_id())
+                    .orElseThrow(() -> new EntityNotFoundException("Cliente não encontrado com ID: " + usuarioEntity.getCliente_id()));
+            usuario.setCliente(cliente);
+        }
+
+        if (usuarioEntity.getFuncionario_id() != null) {
+            FuncionarioModel funcionario = funcionarioRepository.findById(usuarioEntity.getFuncionario_id())
+                    .orElseThrow(() -> new EntityNotFoundException("Funcionário não encontrado com ID: " + usuarioEntity.getFuncionario_id()));
+            usuario.setFuncionario(funcionario);
+        }
+
+        if (usuarioEntity.getAdmin_id() != null) {
+            AdminModel admin = adminRepository.findById(usuarioEntity.getAdmin_id())
+                    .orElseThrow(() -> new EntityNotFoundException("Admin não encontrado com ID: " + usuarioEntity.getAdmin_id()));
+            usuario.setAdmin(admin);
+        }
+
+        if (usuarioEntity.getFamiliar_id() != null) {
+            FamiliarModel familiar = familiarRepository.findById(usuarioEntity.getFamiliar_id())
+                    .orElseThrow(() -> new EntityNotFoundException("Familiar não encontrado com ID: " + usuarioEntity.getFamiliar_id()));
+            usuario.setFamiliar(familiar);
+        }
 
         usuarioRepository.save(usuario);
     }
 
-    public UsuarioModel buscarUsuarioPorId(int id) {
-        UsuarioEntity usuarioEntity = usuarioRepository.findById(id)
+    public UsuarioEntity buscarUsuarioPorId(int id) {
+        UsuarioModel usuarioModel = usuarioRepository.findById(id)
                 .orElseThrow(() -> new EntityNotFoundException("Usuário não encontrado com ID: " + id));
-        List<Papel> papeis = usuarioEntity.getPapeis().stream()
-                .map(PapelEntity::getPapel)
+        List<Papel> papeis = usuarioModel.getPapeis().stream()
+                .map(PapelModel::getPapel)
                 .toList();
-        return new UsuarioModel(usuarioEntity.getId(), usuarioEntity.getNomeUsuario(), null, papeis);
+        Integer clienteId = usuarioModel.getCliente() != null ? usuarioModel.getCliente().getId() : null;
+        Integer funcionarioId = usuarioModel.getFuncionario() != null ? usuarioModel.getFuncionario().getId() : null;
+        Integer adminId = usuarioModel.getAdmin() != null ? usuarioModel.getAdmin().getId() : null;
+        Integer familiarId = usuarioModel.getFamiliar() != null ? usuarioModel.getFamiliar().getId() : null;
+        return new UsuarioEntity(usuarioModel.getId(), usuarioModel.getNomeUsuario(), null, papeis, clienteId, funcionarioId, adminId, familiarId);
     }
 
-    public List<UsuarioModel> listarUsuarios() {
-        List<UsuarioEntity> usuarios = usuarioRepository.findAll();
+    public List<UsuarioEntity> listarUsuarios() {
+        List<UsuarioModel> usuarios = usuarioRepository.findAll();
         return usuarios.stream()
-                .map(usuario -> new UsuarioModel(usuario.getId(), usuario.getNomeUsuario(), null, Collections.emptyList()))
+                .map(usuario -> {
+                    Integer clienteId = usuario.getCliente() != null ? usuario.getCliente().getId() : null;
+                    Integer funcionarioId = usuario.getFuncionario() != null ? usuario.getFuncionario().getId() : null;
+                    Integer adminId = usuario.getAdmin() != null ? usuario.getAdmin().getId() : null;
+                    Integer familiarId = usuario.getFamiliar() != null ? usuario.getFamiliar().getId() : null;
+                    return new UsuarioEntity(usuario.getId(), usuario.getNomeUsuario(), null, Collections.emptyList(), clienteId, funcionarioId, adminId, familiarId);
+                })
                 .toList();
     }
 
-    public List<UsuarioModel> listarUsuariosPorPapel(Papel papel) {
-        List<UsuarioEntity> usuarios = usuarioRepository.findByPapeis_Papel(papel);
+    public List<UsuarioEntity> listarUsuariosPorPapel(Papel papel) {
+        List<UsuarioModel> usuarios = usuarioRepository.findByPapeis_Papel(papel);
         return usuarios.stream()
-                .map(usuario -> new UsuarioModel(usuario.getId(), usuario.getNomeUsuario(), null, Collections.emptyList()))
+                .map(usuario -> {
+                    Integer clienteId = usuario.getCliente() != null ? usuario.getCliente().getId() : null;
+                    Integer funcionarioId = usuario.getFuncionario() != null ? usuario.getFuncionario().getId() : null;
+                    Integer adminId = usuario.getAdmin() != null ? usuario.getAdmin().getId() : null;
+                    Integer familiarId = usuario.getFamiliar() != null ? usuario.getFamiliar().getId() : null;
+                    return new UsuarioEntity(usuario.getId(), usuario.getNomeUsuario(), null, Collections.emptyList(), clienteId, funcionarioId, adminId, familiarId);
+                })
                 .toList();
     }
 
-    public UsuarioModel buscarUsuarioPorIdEPapel(int id, Papel papel) {
-        UsuarioEntity usuarioEntity = usuarioRepository.findById(id)
-                .orElseThrow(() -> new EntityNotFoundException("Usuário não encontrado com ID: " + id));
-
-        boolean possuiApenasOPapel = usuarioEntity.getPapeis().size() == 1 &&
-                usuarioEntity.getPapeis().getFirst().getPapel() == papel;
-        if (!possuiApenasOPapel) {
-            throw new EntityNotFoundException("Usuário não possui o papel " + papel.name() + " ou possui múltiplos papéis.");
+    public UsuarioEntity buscarUsuarioPorIdEPapel(int id, Papel papel) {
+        UsuarioModel usuarioModel = usuarioRepository.findByIdAndPapeis_Papel(id, papel);
+        if (usuarioModel == null) {
+            throw new EntityNotFoundException("Usuário " + papel.name() + " não encontrado com ID: " + id);
         }
-
-        return new UsuarioModel(
-                usuarioEntity.getId(),
-                usuarioEntity.getNomeUsuario(),
+        Integer clienteId = usuarioModel.getCliente() != null ? usuarioModel.getCliente().getId() : null;
+        Integer funcionarioId = usuarioModel.getFuncionario() != null ? usuarioModel.getFuncionario().getId() : null;
+        Integer adminId = usuarioModel.getAdmin() != null ? usuarioModel.getAdmin().getId() : null;
+        Integer familiarId = usuarioModel.getFamiliar() != null ? usuarioModel.getFamiliar().getId() : null;
+        return new UsuarioEntity(
+                usuarioModel.getId(),
+                usuarioModel.getNomeUsuario(),
                 null,
-                List.of(papel)
+                List.of(papel),
+                clienteId,
+                funcionarioId,
+                adminId,
+                familiarId
         );
     }
 
-    public void atualizarUsuarioPorPapel(int id, UsuarioModel usuarioModel, Papel papel) {
-        UsuarioEntity usuarioEntity = usuarioRepository.findById(id)
+    public void atualizarUsuarioPorPapel(int id, UsuarioEntity usuarioEntity, Papel papel) {
+        UsuarioModel usuarioModel = usuarioRepository.findById(id)
                 .orElseThrow(() -> new EntityNotFoundException("Usuário não encontrado com ID: " + id));
 
-        boolean possuiApenasOPapel = usuarioEntity.getPapeis().size() == 1 &&
-                usuarioEntity.getPapeis().getFirst().getPapel() == papel;
-        if (!possuiApenasOPapel) {
-            throw new IllegalArgumentException("Usuário não possui o papel " + papel.name() + " ou possui múltiplos papéis.");
+        boolean possuiPapel = usuarioModel.getPapeis().stream().anyMatch(p -> p.getPapel() == papel);
+        if (!possuiPapel) {
+            throw new IllegalArgumentException("Usuário não possui o papel " + papel.name());
         }
 
-        if (usuarioRepository.existsByNomeUsuario(usuarioModel.getNomeUsuario()) &&
-            !usuarioEntity.getNomeUsuario().equals(usuarioModel.getNomeUsuario())) {
-            throw new IllegalArgumentException("Já existe um usuário com o nome: " + usuarioModel.getNomeUsuario());
+        if (usuarioRepository.existsByNomeUsuario(usuarioEntity.getNomeUsuario()) &&
+            !usuarioModel.getNomeUsuario().equals(usuarioEntity.getNomeUsuario())) {
+            throw new IllegalArgumentException("Já existe um usuário com o nome: " + usuarioEntity.getNomeUsuario());
         }
 
-        usuarioEntity.setNomeUsuario(usuarioModel.getNomeUsuario());
-        if (usuarioModel.getSenha() != null && usuarioModel.getSenha().validaSenha()) {
-            usuarioEntity.setSenha(PasswordEncoder.encode(usuarioModel.getSenha().getSenha()));
+        usuarioModel.setNomeUsuario(usuarioEntity.getNomeUsuario());
+        if (usuarioEntity.getSenha() != null && usuarioEntity.getSenha().validaSenha()) {
+            usuarioModel.setSenha(passwordEncoder.encode(usuarioEntity.getSenha().getSenha()));
         }
 
-        PapelEntity papelEntity = papelRepository.findByPapel(papel);
-        if (papelEntity == null) {
-            throw new EntityNotFoundException("Papel não encontrado: " + papel.name());
+        List<Papel> novosPapeisEnum = usuarioEntity.getPapel();
+        if (novosPapeisEnum != null && !novosPapeisEnum.isEmpty()) {
+            List<PapelModel> novosPapeis = novosPapeisEnum.stream()
+                    .map(papelRepository::findByPapel)
+                    .collect(Collectors.toList());
+            usuarioModel.setPapeis(novosPapeis);
         }
-        usuarioEntity.setPapeis(List.of(papelEntity));
 
-        usuarioRepository.save(usuarioEntity);
+        usuarioRepository.save(usuarioModel);
     }
 
     public void deletarUsuario(int id) {
-        UsuarioEntity usuarioEntity = usuarioRepository.findById(id)
+        UsuarioModel usuarioModel = usuarioRepository.findById(id)
                 .orElseThrow(() -> new EntityNotFoundException("Usuário não encontrado com ID: " + id));
-        usuarioRepository.delete(usuarioEntity);
+        usuarioRepository.delete(usuarioModel);
     }
 
     public void deletarUsuarioPorPapel(int id, Papel papel) {
-        UsuarioEntity usuarioEntity = usuarioRepository.findById(id)
+        UsuarioModel usuarioModel = usuarioRepository.findById(id)
                 .orElseThrow(() -> new EntityNotFoundException("Usuário não encontrado com ID: " + id));
 
-        boolean possuiApenasOPapel = usuarioEntity.getPapeis().size() == 1 &&
-                usuarioEntity.getPapeis().getFirst().getPapel() == papel;
-        if (!possuiApenasOPapel) {
-            throw new EntityNotFoundException("Usuário não possui o papel " + papel.name() + " ou possui múltiplos papéis.");
+        boolean possuiPapel = usuarioModel.getPapeis().stream().anyMatch(p -> p.getPapel() == papel);
+        if (!possuiPapel) {
+            throw new EntityNotFoundException("Usuário não possui o papel " + papel.name());
         }
 
-        usuarioRepository.delete(usuarioEntity);
+        usuarioRepository.delete(usuarioModel);
     }
 
     public void alternarStatusUsuario(int id, String status) {
@@ -147,31 +196,55 @@ public class UsuarioService {
             throw new IllegalArgumentException("Status inválido. Use 'ATIVADO' ou 'DESATIVADO'.");
         }
 
-        UsuarioEntity usuarioEntity = usuarioRepository.findById(id)
+        UsuarioModel usuarioModel = usuarioRepository.findById(id)
                 .orElseThrow(() -> new EntityNotFoundException("Usuário não encontrado com ID: " + id));
 
-        PapelEntity papelAtual = papelRepository.findByPapel(
-                usuarioEntity.getPapeis().stream()
-                        .anyMatch(p -> p.getPapel().equals(Papel.ATIVADO)) ? Papel.ATIVADO : Papel.DESATIVADO
-        );
+        PapelModel papelAtivado = papelRepository.findByPapel(Papel.ATIVADO);
+        PapelModel papelDesativado = papelRepository.findByPapel(Papel.DESATIVADO);
 
-        PapelEntity papelAlternativo = papelRepository.findByPapel(
-                statusFormatado.equals("ATIVADO") ? Papel.ATIVADO : Papel.DESATIVADO
-        );
-
-        if (papelAtual == null || papelAlternativo == null) {
+        if (papelAtivado == null || papelDesativado == null) {
             throw new EntityNotFoundException("Roles ATIVADO ou DESATIVADO não encontradas.");
         }
 
-        List<PapelEntity> papeis = usuarioEntity.getPapeis();
-        if (!papeis.contains(papelAlternativo)) {
-            papeis.remove(papelAtual);
-            papeis.add(papelAlternativo);
+        List<PapelModel> papeis = usuarioModel.getPapeis();
+        papeis.remove(papelAtivado);
+        papeis.remove(papelDesativado);
+
+        if (statusFormatado.equals("ATIVADO")) {
+            papeis.add(papelAtivado);
         } else {
-            throw new IllegalArgumentException("Usuário já possui o status: " + statusFormatado);
+            papeis.add(papelDesativado);
         }
 
-        usuarioEntity.setPapeis(papeis);
-        usuarioRepository.save(usuarioEntity);
+        usuarioModel.setPapeis(papeis);
+        usuarioRepository.save(usuarioModel);
+    }
+
+    public UsuarioModel buscarPorFuncionarioId(Integer funcionarioId) {
+        return usuarioRepository.findByFuncionarioId(funcionarioId)
+                .orElseThrow(() -> new EntityNotFoundException("Usuário não encontrado para o funcionário com ID: " + funcionarioId));
+    }
+
+    public UsuarioModel buscarPorAdminId(Integer adminId) {
+        return usuarioRepository.findByAdminId(adminId)
+                .orElseThrow(() -> new EntityNotFoundException("Usuário não encontrado para o admin com ID: " + adminId));
+    }
+
+    public UsuarioModel buscarPorClienteId(Integer clienteId) {
+        return usuarioRepository.findByClienteId(clienteId)
+                .orElseThrow(() -> new EntityNotFoundException("Usuário não encontrado para o cliente com ID: " + clienteId));
+    }
+
+    public UsuarioModel buscarPorFamiliarId(Integer familiarId) {
+        return usuarioRepository.findByFamiliarId(familiarId)
+                .orElseThrow(() -> new EntityNotFoundException("Usuário não encontrado para o familiar com ID: " + familiarId));
+    }
+
+    public void inativarUsuario(int id) {
+        alternarStatusUsuario(id, "DESATIVADO");
+    }
+
+    public void ativarUsuario(int id) {
+        alternarStatusUsuario(id, "ATIVADO");
     }
 }
